--- a/recipes/classic-waffles.html
+++ b/recipes/classic-waffles.html
@@ -13,5 +13,44 @@
             <h1>Classic Waffles</h1>
             <img class="food" src="../images/classic-waffles.jpeg">
         </header>
+        <article>
+            <h2>Description</h2>
+            <P>Waffles are a classic breakfast dish to eat in the morning. This 
+            <br>traditional recipe will give it that classic golden brown-sugar 
+            <br>texture and nostolgic aroma. The best part is . . . it's very easy to make! 
+            <br>All it takes is adding the correct measurements and a bit of patience.
+            <br>Now moving on to how much time it takes to make these delicious golden squares.
+            <br>The prep time will take around 10 minutes, while cooking the whole batch 
+            <br>will take around 15 minutes. This batch will yield about 10 to 12 classic waffles. 
+            <br>It will total to 5 servings.</P>
+        </article>
+        <article>
+            <h2>Ingredients</h2>
+            <ul>
+                <li>2 cups all-purpose flour</li>
+                <li>1 teaspoon salt</li>
+                <li>4 teaspoons baking powder</li>
+                <li>2 tablespoons white sugar</li>
+                <li>2 eggs</li>
+                <li>1 1/2 cups warm milk</li>
+                <li>1/3 cup butter, melted</li>
+                <li>1 teaspoon vanilla extract</li>
+            </ul>
+        </article>
+        <article>
+            <h2>Steps</h2>
+            <ol>
+            <li>
+            <p>Grab a large bowl for mixing. Mix the flour, salt, baking powder and 
+            sugar together. Preheat waffle iron to desired tempature.</p></li>
+
+            <li>
+            <p>Grab a second bowl, beat the eggs. Then stir in the milk; butter and vanilla. 
+            Pour the liquid mixture into the flour mixture; beat until blended.</p></li>
+            
+            <li>
+            <p>Ladle the batter into preheated waffle iron. Cook until golden and crisp. Serve immediately.</p></li>
+            </ol>
+        </article>
     </body>
 </html>
