--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             <h4>Recipes</h4>
             <ul>
                 <li><a href="recipes/classic-waffles.html">Classic Waffles</a></li>
+                <li><a href="recipes/triple-chocolate-chunk-cookies.html">Triple chocolate chunk cookies</a></li>
             </ul>
         </header>
     </body>
