Partly finish html file
Added last html file, did not finish. Updated css file, and added new image.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="css/styles.css" rel="stylesheet" type="text/css">
         <title>odin recipes</title>
     </head>
     <body>
@@ -11,8 +12,9 @@
             <h1>Odin Recipes</h1>
             <h4>Recipes</h4>
             <ul>
-                <li><a href="recipes/classic-waffles.html">Classic Waffles</a></li>
+                <li><a href="recipes/classic-waffles.html">Classic waffles</a></li>
                 <li><a href="recipes/triple-chocolate-chunk-cookies.html">Triple chocolate chunk cookies</a></li>
+                <li><a href="recipes/peanutbutter-bar.html">Peanutbutter bars</a></li>
             </ul>
         </header>
     </body>
