--- a/recipes/classic-waffles.html
+++ b/recipes/classic-waffles.html
@@ -5,13 +5,13 @@
         <meta http-equiv="V-UA-Compatible" content="IE-edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="../css/styles.css" rel="stylesheet" type="text/css">
-        <title>classic-waffles</title>
+        <title>Odin Recipes Classic Waffles</title>
     </head>
     <body>
         <header>
             <a href="../index.html"><h1>Odin Recipes</h1></a>
             <h1>Classic Waffles</h1>
-            <img class="food" src="../images/classic-waffles.jpeg">
+            <img class="waffles" src="../images/classic-waffles.jpeg">
         </header>
         <article>
             <h2>Description</h2>
