--- a/index.html
+++ b/index.html
@@ -8,14 +8,17 @@
         <title>odin recipes</title>
     </head>
     <body>
-        <header>
-            <h1>Odin Recipes</h1>
-            <h4>Recipes</h4>
-            <ul>
-                <li><a href="recipes/classic-waffles.html">Classic waffles</a></li>
-                <li><a href="recipes/triple-chocolate-chunk-cookies.html">Triple chocolate chunk cookies</a></li>
-                <li><a href="recipes/peanutbutter-bar.html">Peanutbutter bars</a></li>
-            </ul>
-        </header>
+        <div class="border">
+            <header>
+                <h1>Odin Recipes</h1>
+                <h4>Recipes</h4>
+                <ul>
+                    <li><a href="recipes/classic-waffles.html">Classic waffles</a></li>
+                    <li><a href="recipes/triple-chocolate-chunk-cookies.html">Triple chocolate chunk cookies</a></li>
+                    <li><a href="recipes/peanutbutter-bars.html">Peanutbutter bars</a></li>
+                </ul>
+            </header>
+        </div>
+        </main>
     </body>
 </html>
