--- a/recipes/triple-chocolate-chunk-cookies.html
+++ b/recipes/triple-chocolate-chunk-cookies.html
@@ -1,71 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="../css/styles.css" rel="stylesheet" type="text/css">
     <title>Odin Recipes Triple chocolate chunk cookies</title>
 </head>
 <body>
-   <header>
-       <a href="../index.html"><h1>Odin Recipes</h1></a>
-       <h1>Triple chocolate Chunk Cookies</h1>
-       <img class="cookies" src="../images/cookies.jpeg">
-   </header>
-   <article>
-        <h2>Description</h2>
-        <p>These cookies are no ordinary cookies, they contain three different chocolate flavors. 
-        They can be made large or small. They are crispy on the outside, chewy on the inside
-        It is reccomended to refridgerate the batter for 48 hours before baking, which allows the 
-        dough to fully form its flavor. The time it'll take to prep is 15 minutes, cooking time is 10 minutes.</p>
-   </article>
-   <article>
-       <h2>Ingredients</h2>
-       <ul>
-           <li>3/4 cup brown sugar</li>
-           <li>1/2 cup unsalted butter, at room tempature</li>
-           <li>1/2 cup white sugar</li>
-           <li>1 teaspoon salt</li>
-           <li>1 large egg</li>
-           <li>1 teaspoon vanilla extract</li>
-           <li>1 1/2 all-purpose flour</li>
-           <li>3/4 teaspoon baking flour</li>
-           <li>1 cup milk chocolate chip</li>
-           <li>1 (3 ounce) bar dark choclate, cut into chunks</li>
-           <li>3 tablespoon white chocolate chips</li>
-       </ul>
-   </article>
-   <article>
-       <h2>Steps</h2>
-       <ol>
-           <li>
-               Combine brown sugar, butter, white sugar, and 
-               salt in a large bowl; beat with an electric mixer 
-               until a creamy, deep brown mixture forms. Add egg 
-               and vanilla; beat until mixture lightens and becomes 
-               smooth, 10 to 15 seconds.
-            </li>
-            <li>
-                Mix flour and baking soda together in a separate bowl. 
-                Add slowly to the wet ingredients until mostly incorporated, but
-                some white traces of flour remain. Fold in milk chocolate, dark 
-                chocolate, and white chocolate using a spatula, not the
-                mixer. Cover the dough and refrigerate for at least 30 minutes, 
-                or up to 48 hours.
-            </li>
-            <li>
-                Preheat the oven to 350 degrees F (175 degrees C) when ready to bake.
-            </li>
-            <li>
-                Divide cold dough into 2 1/4-ounce portions and place on a cookie sheet.
-            </li>
-            <li>
-                Bake in the preheated oven until the edges start to look golden brown and crispy, 
-                10 to 12 minutes. Do not overbake; thecenters will not look fully done. 
-                Cool until cookies are set, about 30 minutes.
-            </li>
-       </ol>
-   </article>
+    <div class="border">
+        <header>
+            <a href="../index.html"><h1>Odin Recipes</h1></a>
+            <h1>Triple chocolate Chunk Cookies</h1>
+            <img class="cookies" src="../images/cookies.jpeg">
+        </header>
+        <article>
+            <h2>Description</h2>
+            <p>These cookies are no ordinary cookies, they contain three different chocolate flavors. 
+            They can be made large or small. They are crispy on the outside, chewy on the inside
+            It is reccomended to refridgerate the batter for 48 hours before baking, which allows the 
+            dough to fully form its flavor. The time it'll take to prep is 15 minutes, cooking time is 10 minutes.</p>
+        </article>
+        <article>
+            <h2>Ingredients</h2>
+            <ul>
+                <li>3/4 cup brown sugar</li>
+                <li>1/2 cup unsalted butter, at room tempature</li>
+                <li>1/2 cup white sugar</li>
+                <li>1 teaspoon salt</li>
+                <li>1 large egg</li>
+                <li>1 teaspoon vanilla extract</li>
+                <li>1 1/2 all-purpose flour</li>
+                <li>3/4 teaspoon baking flour</li>
+                <li>1 cup milk chocolate chip</li>
+                <li>1 (3 ounce) bar dark choclate, cut into chunks</li>
+                <li>3 tablespoon white chocolate chips</li>
+            </ul>
+        </article>
+        <article>
+            <h2>Steps</h2>
+            <ol>
+                <li>
+                    <p>Combine brown sugar, butter, white sugar, and 
+                    salt in a large bowl; beat with an electric mixer 
+                    until a creamy, deep brown mixture forms. Add egg 
+                    and vanilla; beat until mixture lightens and becomes 
+                    smooth, 10 to 15 seconds.</p>
+                </li>
+                <li>
+                    <p>Mix flour and baking soda together in a separate bowl. 
+                    Add slowly to the wet ingredients until mostly incorporated, but
+                    some white traces of flour remain. Fold in milk chocolate, dark 
+                    chocolate, and white chocolate using a spatula, not the
+                    mixer. Cover the dough and refrigerate for at least 30 minutes, 
+                    or up to 48 hours.</p>
+                </li>
+                <li>
+                    <p>Preheat the oven to 350 degrees F (175 degrees C) when ready to bake.</p>
+                </li>
+
+                <li>
+                    <p>Divide cold dough into 2 1/4-ounce portions and place on a cookie sheet.</p>
+                </li>
+
+                <li>
+                    <p>Bake in the preheated oven until the edges start to look golden brown and crispy, 
+                    10 to 12 minutes. Do not overbake; thecenters will not look fully done. 
+                    Cool until cookies are set, about 30 minutes.</p>
+                </li>
+            </ol>
+        </article>
+    </div>
 </body>
 </html>
