--- a/recipes/peanutbutter-bars.html
+++ b/recipes/peanutbutter-bars.html
@@ -2,25 +2,55 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <meta http-equiv="V-UA-Compatible" content="IE-edge">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="../css/styles.css" rel="stylesheet" content="text/css">
         <title>Odin Recipes Peanutbutter bar</title>
     </head>
     <body>
-        <header>
-            <a href="../index.html"><h1>Odin Recipes</h1></a>
-            <h1>Peanutbutter Bar</h1>
-            <img class="pbar" src="../images/pbar.jpeg">
-        </header>
-        <article>
-            <h2>Description</h2>
-            <p>
-                These peanut butter bars are a great snack to take on the 
-                go or eating in between meals. The best part about these bars 
-                is the ingrediants are easy to obtain and easy to bake. 
-                They're also quite nutritionous, which means more energy during your day.
-            </p>
-        </article>
+        <div class="border">
+            <header>
+                <a href="../index.html"><h1>Odin Recipes</h1></a>
+                <h1>Peanutbutter Bar</h1>
+                <img class="pbar" src="../images/pbar.jpeg">
+            </header>
+            <article>
+                <h2>Description</h2>
+                <p>
+                    These peanut butter bars are a great snack to take on the 
+                    go or eating in between meals. The best part about these bars 
+                    is the ingrediants are easy to obtain and easy to bake. 
+                    They're also quite nutritionous, which means more energy during your day.
+                </p>
+            </article>
+            <article>
+                <h2>Ingrediants</h2>
+                <ul>
+                    <li>1 cup peanut butter</li>
+                    <li>1/2 cup packed brown sugar</li>
+                    <li>1/2 cup corn syrup</li>
+                    <li>1/3 cup butter</li>
+                    <li>2 teaspoons vanilla extract</li>
+                    <li>3 1/3 cup rolled oats</li>
+                    <li>1/2 cup flaked cocnut</li>
+                    <li>1/2 cup sunflower seeds</li>
+                    <li>1/2 cup raisins</li>
+                    <li>1/2 cup semisweet chocolate chips</li>
+                </ul>
+            </article>
+            <article>
+                <h2>Steps</h2>
+                <ol>
+                    <li><p>Preheat oven to 350 degrees F (175 degrees C).</p></li>
+
+                    <li><p>In a large bowl stir together the peanut butter, the butter or margarine, the brown sugar, the syrup and the vanilla
+                    until smooth.</p></li>
+
+                    <li><p>Add all the other ingredients. Stir well.</p></li>
+
+                    <li><p>Press the mixture into 13 x 9 inch greased pan. Bake for 20-25 minutes. Let cool on wire rack before cutting into bars.</p></li>
+                </ol>
+            </article>
+        </div>
     </body>
 </html>
